# libmcp9808

./: COPYING  Makefile.am  autogen.sh  configure.ac  libmcp9808++.pc.in  libmcp9808.pc.in
example/: Makefile.am  Mcp9808MonitorExample.cc
include/: Makefile.am
include/libmcp9808/: Mcp9808.h  libmcp9808.h  mcp9808-regs.h
m4/: gtest-config.sh
src/: Makefile.am  Mcp9808.cpp  libmcp9808.c
test/: Makefile.am  Mcp9808StaticTest.cc  Mcp9808Test.cc
